# project-omni

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SOUL.md  agent.py  docker-compose.yml  im_platforms.py  main.py  mcp_client.py  memory.py  pyproject.toml  requirements.txt  scheduler.py  server.py  tools.py  tools_browser.py  tools_file.py  tools_rag.py  tools_sandbox.py  tools_voice.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: prd-v1.md
tests/: __init__.py  conftest.py  test_agent.py  test_server.py  test_tools.py  test_tools_browser.py
web/ui/: index.html  package.json  tailwind.config.js  vite.config.ts
web/ui/src/: App.tsx  index.css
